# physics_notes

./: .electromagnetism.typ.swp  .gitignore  EMBEDDING_MODEL_PLAN.md  LICENSE  NOTICE  README.md  debug_search.html  dirlens.txt  electromagnetism.typ  embeddings.json  index.html  package-lock.json  package.json  phy.typ  q_and_a.txt  q_and_a_data.json  q_and_a_data_handcrafted.json  search.html  template.typ  version.json
.github/workflows/: build.yml  physq-release.yml  tmp-macos26-intel-test.yml  tmp-macos26-test.yml  tmp-xcode-diag.yml
fast/: index.html  search.html
physq/: Cargo.toml  README.md
physq/scripts/: parity_check.js
physq/src/: cli.rs  config.rs  engine.rs  eval.rs  lib.rs  main.rs  model.rs  real_data_tests.rs  spinner.rs  update.rs
physq/src/bm25/: mod.rs
physq/src/data/: mod.rs
physq/src/query/: mod.rs
physq/src/rank/: mod.rs
physq/src/semantic/: mod.rs
physq/src/tui/: command.rs  mod.rs  vim.rs
scripts/: build.js  model_bakeoff.py  q&a_text_importer.gs  self_improve.py
