[package]
name = "physq"
version = "0.1.0"
edition = "2021"
description = "Local hybrid search (BM25 + e5 semantic, RRF-fused) for the Physics Notes Q&A corpus"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
bincode = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
fastembed = { version = "5.17", default-features = false, features = [
    "hf-hub-rustls-tls",
    "ort-download-binaries-rustls-tls",
] }
lindera = { version = "4.0", features = ["embed-ipadic"] }
ratatui = "0.30"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
unicode-width = "0.2"

# Release binaries go to GitHub Releases — optimize for size/startup.
[profile.release]
lto = true
strip = "symbols"
codegen-units = 1

# Keep local build artifacts small (heavy native deps: ort, lindera dict).
[profile.dev]
debug = 0
incremental = false
