[package]
name = "physq"
version = "0.1.6-rc2"
edition = "2024"
description = "Local hybrid search (BM25 + e5 semantic, RRF-fused) for the Physics Notes Q&A corpus"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
bincode = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
fastembed = { version = "5.17", default-features = false, features = [
    "hf-hub-rustls-tls",
    "ort-download-binaries-rustls-tls",
] }
lindera = { version = "4.0", features = ["embed-ipadic"] }
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "blocking"] }
self-replace = "1"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
unicode-width = "0.2"

# Release binaries go to GitHub Releases — optimize for size/startup.
[profile.release]
lto = true
strip = "symbols"
codegen-units = 1

# Keep local build artifacts small (heavy native deps: ort, lindera dict).
[profile.dev]
debug = 0
incremental = false
